# diet_plan_generator

./: .gitignore  LICENSE  README.md  docker-compose.yml  heroku.yml  pyproject.toml
.github/workflows/: main.yml
app/: Dockerfile  entrypoint.sh  heroku.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
app/diet_plan_generator/: asgi.py  settings.py  urls.py  wsgi.py
app/ingredients/: admin.py  exceptions.py  models.py
app/ingredients/migrations/: 0001_initial.py  0002_auto_20201125_2036.py  0002_auto_20210105_1826.py  0003_liquid.py
app/plans/: admin.py  apps.py  models.py
app/plans/management/commands/: weekly_plan_generator.py
app/plans/migrations/: 0001_add_user.py  0001_initial.py
app/plans/tests/: daily_tests.py  weekly_tests.py
app/recipes/: admin.py  models.py  tests.py
app/recipes/management/commands/: breakfasts.json  cocktails.json  data_loader.py  dinners.json  lunches.json  soups.json
app/recipes/migrations/: 0001_initial.py  0002_load_meals.py  0002_receipt_diet_name.py  0003_auto_20201125_2007.py  0004_auto_20201125_2036.py  0005_load_breakfast.py  0006_auto_20201129_1626.py  0007_auto_20201203_1808.py
app/recipes/tests/: data_loader_tests.py  shop_list_tests.py
app/users/: apps.py
app/users/migrations/: 0001_add_user.py
